--- a/Elton/STATIONARYstyles.css
+++ b/Elton/STATIONARYstyles.css
@@ -1,51 +1,145 @@
-*{
+* {
     box-sizing: border-box;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     font-family: montserrat;
 }
-.bg-color{
+
+.bg-color {
     background-color: #FFE619;
 }
-main section aside >span{
+
+main section aside>span {
     position: absolute;
-    top:-5vh;
+    top: -5vh;
     left: 6.6vw;
 }
-main section aside{
-    width:25%;
+
+main section aside {
+    width: 25%;
     position: relative;
 }
-main section aside>div{
-    margin-left:6.5vw;
+
+main section aside>div {
+    margin-left: 6.5vw;
 }
+
 main section .right {
-    position:relative;
+    position: relative;
 }
-main section .right .sort{
-    position:absolute;
-    top:-7vh;
-    right:2vw;
+
+main section .right .sort {
+    position: absolute;
+    top: -7vh;
+    right: 2vw;
 }
-main section .right .items .item .pic{
-    height:28vh;
-    width:14vw;
+
+main section .right .items .item .pic {
+    height: 28vh;
+    width: 14vw;
 }
-main section .items .author a{
+
+main section .items .author a {
     color: #1f4f95;
 }
-main section .bag p{
-    font-size:10px;
-    border:solid black 1px;
-    margin-left:8%;
-    padding:3.5% 8%;
-    border-radius:4px;
-    cursor: pointer;
-}
-main section .bag i{
-    padding-left:6%;
+
+main section .bag p {
+    font-size: 10px;
+    border: solid black 1px;
+    margin-left: 8%;
+    padding: 3.5% 8%;
+    border-radius: 4px;
     cursor: pointer;
 }
 
+main section .bag i {
+    padding-left: 6%;
+    cursor: pointer;
+}
+
+footer .stay {
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    margin-top: 9vh;
 
 
+    align-items: center;
+    justify-content: center;
+
+}
+
+footer .stay .child {
+    margin: 2%;
+}
+
+footer .stay .child:nth-child(2) {
+    width: 17%;
+    color: #3e434b;
+}
+
+footer .stay input[type="text"] {
+    border: 1px solid #423f3f;
+    padding: 8px;
+    font-size: 16px;
+    outline: none;
+}
+
+footer form {
+    position: relative;
+}
+
+footer .stay .pic {
+    height: 5vw;
+    width: 4vh;
+    border-radius: 100%;
+    margin: 0 0.6vw;
+}
+
+footer .stay .pic img {
+    object-fit: contain;
+    border-radius: 100%;
+}
+
+footer .stay form i {
+    position: absolute;
+    right: 0;
+    top: 23px;
+}
+
+footer .cross {
+    padding: 3vh 15vw;
+    border-bottom: 1px solid #cccccc;
+    margin-bottom: 3vh;
+}
+
+footer .cross>.flex {
+    justify-content: space-between;
+}
+
+footer .cross .one {
+    width: 24vw;
+}
+
+footer .cross .one .pic {
+    height: 59px;
+    width: 170px;
+}
+
+footer .cross .one ul .minipic {
+    height: 2vh;
+    width: 1vw;
+    border-radius: 100%;
+}
+
+footer .cross .one ul .minipic img {
+    border-radius: 100%;
+}
+
+footer .cross .under-line h3 {
+    border-bottom: 1px solid #cccccc;
+}
+
+.last {
+    padding: 0 15vw;
+    margin-bottom: 3vh;
+}
