--- a/Ibrahim/Bag/bag.css
+++ b/Ibrahim/Bag/bag.css
@@ -38,6 +38,8 @@ top: 32px;
 }
 
 
+
+
   #footer-1{
     position: relative;
   }
@@ -91,6 +93,7 @@ top: 32px;
   }
 
 
+
     .list ul a{
       font-size: 14px;
     font-weight: 600;
@@ -105,3 +108,26 @@ top: 32px;
     .list ul a:hover{
       color: #FF7E00;
     }
+
+
+
+
+   @media screen and (max-width:700px){
+ 
+     .cards-container1{
+      display: none;
+    }
+   }
+   @media screen and (max-width:550px){
+ 
+    .cards-container2{
+     display: none;
+   }
+   .container{
+    justify-content: space-between;
+   }
+  }
+
+    
+
+ 
