--- a/Docs/style.css
+++ b/Docs/style.css
@@ -13,59 +13,12 @@
 body{
     font-family: Montserrat , sans-serif;
 }
-li{
-    list-style: none;
-}
 
-.drop{
-
-    height: 0;
-    border: 0;
-    transition: all 300ms;
-    overflow: hidden;
-}
-/* .dropdown{
-  height: 1.5rem;
-
-} */
-.dropdown:hover .drop{
-  border: 1px solid ;
-top: 32px;
-  height: fit-content;
-  overflow: visible;
-}
-/* .dropdown:hover {
-    height: fit-content;
-} */
-
-.truck-color{
-    background-color: #F5F5F5;
-}
-
-/* .carousal{
-    display: grid;
-    grid-template-columns: repeat(5,100%);
-    
-} */
-
-/* .section-wrapper {
-
-    overflow-y: hidden;
- 
-    overflow-x: scroll;
-    display: grid;
-    grid-auto-columns:20%;
-    grid-auto-flow: column;
-  }
-   */
 .section-wrapper::-webkit-scrollbar {
     display: none;
   }
   
- /* .section-wrapper::-webkit-scrollbar-thumb {
-    background-color: green;
-    border-radius: 5px;
-  } */
+
 
   .carousel-container {
     overflow: hidden;
@@ -92,57 +45,23 @@ top: 32px;
     75%, 95% { transform: translateX(-300%); }
     100% { transform: translateX(-400%); }
   }
-  #footer-1{
-    position: relative;
+
+
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 
-  #footer-1::after{
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background-color: black;
-    top: 0;
-  }
-.footer-content h3{
-    border-bottom: 1px solid #cccccc;
-}
-  .footer-content li{
-     margin-top: 1px;
-     margin-bottom: 1px;
-    font-family: Montserrat;
-    letter-spacing: .6px;
-    color: #3e434b;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 26px
-  }
-  .footer-content li a:hover{
-     border-bottom: 1px solid #cccccc;
-  }
-
-  .btn button{
-    text-align: center;
-    font: 500 10px / 13px Montserrat;
-    letter-spacing: .5px;
-    color: #000;
-    text-transform: uppercase;
-    width: 104px !important;
-    height: 30px;
-    border: 1px solid;
-    transition: all 0.3s;
-    
-  }
-  .btn button:hover{
-    background-color: black;
-    color: #F5F5F5;
-  }
-  .dropdown > a {
-    padding-bottom: 10px;
-  }
-  .dropdown > a:hover{
-    border-bottom: 3px solid black;
-
-  }
 
     /* Style the carousel container */
     .carousel-container1 {
@@ -176,6 +95,86 @@ top: 32px;
       color: #3e434b;
     }
 
+
+/******************* THIS CSS OTHER MEMBER CAN COPY  ITS START HERE ******/
+    li{
+      list-style: none;
+  }
+  
+  .drop{
+  
+      height: 0;
+      border: 0;
+      transition: all 300ms;
+      overflow: hidden;
+  }
+  
+  .dropdown:hover .drop{
+    border: 1px solid ;
+  top: 32px;
+    height: fit-content;
+    overflow: visible;
+  }
+  /* .dropdown:hover {
+      height: fit-content;
+  } */
+  
+  .truck-color{
+      background-color: #F5F5F5;
+  }
+  
+    .btn button{
+      text-align: center;
+      font: 500 10px / 13px Montserrat;
+      letter-spacing: .5px;
+      color: #000;
+      text-transform: uppercase;
+      width: 104px !important;
+      height: 30px;
+      border: 1px solid;
+      transition: all 0.3s;
+      
+    }
+    .btn button:hover{
+      background-color: black;
+      color: #F5F5F5;
+    }
+    .dropdown > a {
+      padding-bottom: 10px;
+    }
+    .dropdown > a:hover{
+      border-bottom: 3px solid black;
+  
+    }
+
+    #footer-1{
+      position: relative;
+    }
+  
+    #footer-1::after{
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background-color: black;
+      top: 0;
+    }
+  .footer-content h3{
+      border-bottom: 1px solid #cccccc;
+  }
+    .footer-content li{
+       margin-top: 1px;
+       margin-bottom: 1px;
+      font-family: Montserrat;
+      letter-spacing: .6px;
+      color: #3e434b;
+      font-size: 12px;
+      font-weight: 500;
+      line-height: 26px
+    }
+    .footer-content li a:hover{
+       border-bottom: 1px solid #cccccc;
+    }
+
     .list ul a{
       font-size: 14px;
     font-weight: 600;
@@ -191,19 +190,17 @@ top: 32px;
       color: #FF7E00;
     }
 
-    ::-webkit-scrollbar {
-      width: 10px;
+  
+    @media screen and (max-width:400px){
+      .padding-responsive{
+        padding: 0;
+      }
     }
-    ::-webkit-scrollbar-track {
-      background: #f1f1f1;
-    }
-    ::-webkit-scrollbar-thumb {
-      background: #888;
-      border-radius: 5px;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
+
+
+/******************* THIS CSS OTHER MEMBER CAN COPY  ITS END  HERE ******/
+
+
 
     @media screen and (max-width:1000px){
       .card-container1{
@@ -247,8 +244,4 @@ top: 32px;
     }
     
 
-    @media screen and (max-width:400px){
-      .padding-responsive{
-        padding: 0;
-      }
-    }
+   
