--- a/Ibrahim/kids book/kid.css
+++ b/Ibrahim/kids book/kid.css
@@ -101,7 +101,9 @@ body{
     li{
       list-style: none;
   }
-  
+  .logo{
+    cursor: pointer;
+  }
   .drop{
   
       height: 0;
@@ -197,124 +199,21 @@ body{
       .logo{
         width: 104px;
       }
-      .card-parent-container{
-        justify-content: space-evenly;
-      }
-        .cards-container4 img, .cards-container5 img{
-          width: 140px;
-        }
-        .cards-container4{
-          margin-right: 4px;
-        }
-        .cards-container4 , .cards-container5{
-         
-          transition: all 0.3s;
-        
-        }
-        .cards-container4:hover , .cards-container5:hover{
-            transform: scale(1.03);
-        }
 
-        .card-container5 img, .card-container6 img{
-          width: 140px;
-        }
-        .card-container5 , .card-container6{
-          transition: all 0.3s;
-
-        }
-        .card-container5:hover , .card-container6:hover{
-            transform: scale(1.03);
-            font-weight: 600;
-        }
-        .carousel-item1 {
-          flex: 0 0 25%; /* 20% width to display 5 items at a time */
-        }
-        .carousel-item1 img{
-           width: 100px;
-           height: 100px;
-        }
-        .carousel-link{
-          font-size: 10px;
-        }
      
       }
         
 
     
 
-
-/******************* THIS CSS OTHER MEMBER CAN COPY  ITS END  HERE ******/
-
-
- 
-    @media screen and (max-width:1000px){
-      .card-container1{
-         display: none;
-       }
-       .navbar-container{
-         overflow-x: scroll;
-         overflow-y: hidden;
-       }
-     }
-     @media screen and (max-width:900px){
-      .card-container2{
-         display: none;
-       }
-       .carousel-item1 {
-        flex: 0 0 25%; /* 20% width to display 5 items at a time */
-      }
-     }
-   @media screen and (max-width:800px){
-    .card-container2{
-       display: none;
-     }
-     .card-container3{
-      display: none;
+@media screen and (max-width:500px){
+    .card-container{
+        width: 8rem;
     }
-    .carousel-item1 {
-      flex: 0 0 25%; /* 20% width to display 5 items at a time */
+}
+@media screen and (max-width:400px){
+    .card-container{
+        width: 12rem;
+        margin-bottom: 2rem;
     }
-    .carousel-link{
-      font-size: 12px;
-    }
-   }
-   @media screen and (max-width:650px) {
-      .img-card{
-        display: none;
-      }
-      .carousel-item1 {
-        flex: 0 0 45%; /* 20% width to display 5 items at a time */
-      }
-      .carousel-link{
-        font-size: 12px;
-      }
-      .carousel-wrapper1{
-        column-gap: 1.5rem;
-      }
-   }
-    @media screen and (max-width:550px){
-
-      .reponsive{
-        display: none;
-      }
-      .container-reponsive{
-        display: block;
-      }
-      .container-repo{
-        max-width: 100%;
-        max-height: 100%;
-        text-align: center;
-        margin-bottom: 0.5rem;
-      }
-      .cards-container3{
-         display: none;
-      }
-      .card-container4{
-        display: none;
-      }
-    
-   
-    }
-    
-
-   
+}
