--- a/Elton/STATIONARYstyles.css
+++ b/Elton/STATIONARYstyles.css
@@ -1,13 +1,27 @@
-* {
+`* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: montserrat,sans-serif;
 }
 
-.bg-color {
+.bg-color{
     background-color: #FFE619;
 }
+.bg-color-1{
+    background-color: #32CACE;
+}
+.bg-color-2{
+    background-color: #A3B7F0;
+}
+.color{
+    color: #3e434b;
+}
+
+main > p a:hover{
+    color: #FF7E00;
+  }
+
 
 main section aside>span {
     position: absolute;
@@ -149,6 +163,10 @@ top: 32px;
   .list ul a:hover{
     color: #FF7E00;
   }
+
+
+  
+
 
 
 @media (max-width:1279px){
