--- a/Elton/TOP50style.css
+++ b/Elton/TOP50style.css
@@ -5,56 +5,17 @@
     font-family: montserrat,sans-serif;
 }
 
-.bg-color {
+.bg-color{
     background-color: #FFE619;
 }
-
-main section aside>span {
-    position: absolute;
-    top: -5vh;
-    left: 6.6vw;
+.bg-color-1{
+    background-color: #32CACE;
 }
-
-main section aside {
-    width: 100%;
-    position: relative;
+.bg-color-2{
+    background-color: #A3B7F0;
 }
-
-main section aside>div {
-    margin-left: 6.5vw;
-}
-
-main section .right {
-    position: relative;
-}
-
-main section .right .sort {
-    position: absolute;
-    top: -7vh;
-    right: 2vw;
-}
-
-main section .right .items .item .pic {
-    height: 33vh;
-    width: 15vw;
-}
-
-main section .items .author a {
-    color: #1f4f95;
-}
-
-main section .bag p {
-    font-size: 10px;
-    border: solid black 1px;
-    margin-left: 8%;
-    padding: 3.5% 8%;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-main section .bag i {
-    padding-left: 6%;
-    cursor: pointer;
+.color{
+    color: #3e434b;
 }
 
 li{
@@ -149,6 +110,59 @@ top: 32px;
   .list ul a:hover{
     color: #FF7E00;
   }
+
+  main > p a:hover{
+    color: #FF7E00;
+  }
+
+main section aside>span {
+    position: absolute;
+    top: -5vh;
+    left: 6.6vw;
+}
+
+main section aside {
+    width: 100%;
+    position: relative;
+}
+
+main section aside>div {
+    margin-left: 6.5vw;
+}
+
+main section .right {
+    position: relative;
+}
+
+main section .right .sort {
+    position: absolute;
+    top: -7vh;
+    right: 2vw;
+}
+
+main section .right .items .item .pic {
+    height: 33vh;
+    width: 15vw;
+}
+
+main section .items .author a {
+    color: #1f4f95;
+}
+
+main section .bag p {
+    font-size: 10px;
+    border: solid black 1px;
+    margin-left: 8%;
+    padding: 3.5% 8%;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+main section .bag i {
+    padding-left: 6%;
+    cursor: pointer;
+}
+
 
 
 @media (max-width:1279px){
