--- a/siddharth/recommends.css
+++ b/siddharth/recommends.css
@@ -10,13 +10,18 @@
 .color{
     color: #3e434b;
 }
+main > p a:hover{
+  color: #FF7E00;
+}
 body{
     font-family: Montserrat , sans-serif;
 }
 li{
     list-style: none;
 }
-
+.logo{
+   cursor: pointer;
+  }
 .drop{
 
     height: 0;
@@ -24,75 +29,36 @@ li{
     transition: all 300ms;
     overflow: hidden;
 }
-/* .dropdown{
-  height: 1.5rem;
 
-} */
 .dropdown:hover .drop{
   border: 1px solid ;
 top: 32px;
   height: fit-content;
   overflow: visible;
 }
-/* .dropdown:hover {
-    height: fit-content;
-} */
 
-/*.truck-color{
-    background-color:aqua;
+
+.truck-color{
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+ 
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 
-/* .carousal{
-    display: grid;
-    grid-template-columns: repeat(5,100%);
-    
-} */
 
-/* .section-wrapper {
-
-    overflow-y: hidden;
- 
-    overflow-x: scroll;
-    display: grid;
-    grid-auto-columns:20%;
-    grid-auto-flow: column;
-  }
-   */
-.section-wrapper::-webkit-scrollbar {
-    display: none;
-  }
-  
- /* .section-wrapper::-webkit-scrollbar-thumb {
-    background-color: green;
-    border-radius: 5px;
-  } */
-
-  .carousel-container {
-    overflow: hidden;
-    width: 100%;
-    /* height: 100vh; */
-    position: relative;
-  }
-  .carousel-content {
-    display: flex;
-    animation: slide-animation 20s infinite linear alternate;
-     /* Adjust the duration as needed */
-  }
-  .carousel-item {
-    width: 100%;
-    /* height: 100vh; */
-    flex-shrink: 0;
-  }
-
-  /* Keyframes for slide animation */
-  @keyframes slide-animation {
-    0%, 20% { transform: translateX(0); }
-    25%, 45% { transform: translateX(-100%); }
-    50%, 70% { transform: translateX(-200%); }
-    75%, 95% { transform: translateX(-300%); }
-    100% { transform: translateX(-400%); }
-  }
   #footer-1{
     position: relative;
   }
@@ -144,6 +110,132 @@ top: 32px;
     border-bottom: 3px solid black;
 
   }
+
+
+
+    .list ul a{
+      font-size: 14px;
+    font-weight: 600;
+    letter-spacing: .7px;
+    color: #3e434b;
+    line-height: 20px;
+    font-family: Montserrat;
+    text-transform: capitalize;
+    transition: all 0.3s;
+    }
+    
+    .list ul a:hover{
+      color: #FF7E00;
+    }
+   main section aside>span {
+    position: absolute;
+    top: -5vh;
+    left: 6.6vw;
+}
+
+main section aside {
+    width: 100%;
+    position: relative;
+}
+
+main section aside>div {
+    margin-left: 6.5vw;
+}
+
+main section .right {
+    position: relative;
+}
+
+main section .right .sort {
+    position: absolute;
+    top: -7vh;
+    right: 2vw;
+}
+main section .right .specialll{
+    text-decoration: line-through;
+    color:rgb(150, 149, 149);
+}
+main section .right .greennn{
+    color: green;
+}
+main section .right .name{
+    font-size:14px;
+}
+main section .right .author{
+    font-size:12px;
+}
+main section .right .items .item .pic {
+    height: 38vh;
+    width: 15vw;
+}
+
+main section .items .author a {
+    color: #1f4f95;
+}
+
+main section .bag p {
+    font-size: 10px;
+    border: solid black 1px;
+    margin-left: 8%;
+    padding: 3.5% 8%;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+main section .bag i {
+    padding-left: 6%;
+    cursor: pointer;
+}
+
+li{
+    list-style: none;
+}
+
+.drop{
+
+    height: 0;
+    border: 0;
+    transition: all 300ms;
+    overflow: hidden;
+}
+
+.dropdown:hover .drop{
+  border: 1px solid ;
+top: 32px;
+  height: fit-content;
+  overflow: visible;
+}
+/* .dropdown:hover {
+    height: fit-content;
+} */
+
+
+
+  .btn button{
+    text-align: center;
+    font: 500 10px / 13px Montserrat;
+    letter-spacing: .5px;
+    color: #000;
+    text-transform: uppercase;
+    width: 104px !important;
+    height: 30px;
+    border: 1px solid;
+    transition: all 0.3s;
+    
+  }
+  .btn button:hover{
+    background-color: black;
+    color: #F5F5F5;
+  }
+  .dropdown > a {
+    padding-bottom: 10px;
+  }
+  .dropdown > a:hover{
+    border-bottom: 3px solid black;
+
+  }
+
+   
 
   /*main section started*/
   main section aside>span {
@@ -305,6 +397,18 @@ main section .bag i {
     }
 }
 
+.sort {
+    position: fixed; /* Fixed positioning to keep it visible even when scrolling */
+    top: 20px; /* Adjust top position as needed */
+    right: 20px; /* Adjust right position as needed */
+    z-index: 1000; /* Ensure the sort section is on top of other elements */
+    background-color: white; /* Set background color to make it clearly visible */
+    padding: 10px; /* Add padding for better appearance */
+    border: 1px solid #ccc; /* Add border for better separation from other elements */
+    border-radius: 5px; /* Add border-radius for better appearance */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box-shadow for depth */
+}
+
 
 /* Regular styles for sort section */
 .sort {
@@ -354,3 +458,56 @@ main section .bag i {
 .pic:hover .back-image {
     display: block;
 }
+
+ @media screen and (max-width:1000px){
+
+       .navbar-container{
+         overflow-x: scroll;
+         overflow-y: hidden;
+       }
+     }
+     @media screen and (max-width:550px){
+      .reponsive{
+        display: none;
+      }
+    }
+    @media screen and (max-width:400px){
+   
+      .logo{
+        width: 104px;
+      }
+    }
+
+
+    
+
+   @media screen and (max-width:700px){
+ 
+     .cards-container1{
+      display: none;
+    }
+   }
+   @media screen and (max-width:550px){
+  
+    .cards-container2{
+     display: none;
+   }
+   .container{
+    justify-content: space-between;
+   }
+  }
+
+  @media screen and (max-width:500px){
+    .card-container{
+        width: 8rem;
+    }
+}
+@media screen and (max-width:400px){
+    .card-container{
+        width: 12rem;
+        margin-bottom: 2rem;
+    }
+}
+
+
+
