--- a/Saiqua/toys.css
+++ b/Saiqua/toys.css
@@ -47,7 +47,7 @@ main section .bag p {
     font-size: 10px;
     border: solid black 1px;
     margin-left: 8%;
-    padding: 3.5% 8%;
+    padding: 10px;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -144,7 +144,155 @@ footer .cross .under-line h3 {
     margin-bottom: 3vh;
 }
 
-@media (max-width: 1350px) {
+li{
+    list-style: none;
+}
+.logo{
+   cursor: pointer;
+  }
+.drop{
+
+    height: 0;
+    border: 0;
+    transition: all 300ms;
+    overflow: hidden;
+}
+
+.dropdown:hover .drop{
+  border: 1px solid ;
+top: 32px;
+  height: fit-content;
+  overflow: visible;
+}
+
+
+.truck-color{
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+ 
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+
+  #footer-1{
+    position: relative;
+  }
+
+  #footer-1::after{
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background-color: black;
+    top: 0;
+  }
+.footer-content h3{
+    border-bottom: 1px solid #cccccc;
+}
+  .footer-content li{
+     margin-top: 1px;
+     margin-bottom: 1px;
+    font-family: Montserrat;
+    letter-spacing: .6px;
+    color: #3e434b;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 26px
+  }
+  .footer-content li a:hover{
+     border-bottom: 1px solid #cccccc;
+  }
+
+  .btn button{
+    text-align: center;
+    font: 500 10px / 13px Montserrat;
+    letter-spacing: .5px;
+    color: #000;
+    text-transform: uppercase;
+    width: 104px !important;
+    height: 30px;
+    border: 1px solid;
+    transition: all 0.3s;
+    
+  }
+  .btn button:hover{
+    background-color: black;
+    color: #F5F5F5;
+  }
+  .dropdown > a {
+    padding-bottom: 10px;
+  }
+  .dropdown > a:hover{
+    border-bottom: 3px solid black;
+
+  }
+
+
+
+    .list ul a{
+      font-size: 14px;
+    font-weight: 600;
+    letter-spacing: .7px;
+    color: #3e434b;
+    line-height: 20px;
+    font-family: Montserrat;
+    text-transform: capitalize;
+    transition: all 0.3s;
+    }
+    
+    .list ul a:hover{
+      color: #FF7E00;
+    }
+
+
+    @media screen and (max-width:1000px){
+
+       .navbar-container{
+         overflow-x: scroll;
+         overflow-y: hidden;
+       }
+     }
+     @media screen and (max-width:550px){
+      .reponsive{
+        display: none;
+      }
+    }
+    @media screen and (max-width:400px){
+   
+      .logo{
+        width: 104px;
+      }
+    }
+
+
+   @media screen and (max-width:700px){
+ 
+     .cards-container1{
+      display: none;
+    }
+   }
+   @media screen and (max-width:550px){
+  
+    .cards-container2{
+     display: none;
+   }
+   .container{
+    justify-content: space-between;
+   }
+  }
+  @media (max-width: 1350px) {
     .navbar .trouble{
         padding:1.4% 5%;
     }
@@ -240,103 +388,3 @@ footer .cross .under-line h3 {
         font-size:x-small;
     }
 }
-li{
-    list-style: none;
-}
-
-.drop{
-
-    height: 0;
-    border: 0;
-    transition: all 300ms;
-    overflow: hidden;
-}
-
-.dropdown:hover .drop{
-  border: 1px solid ;
-top: 32px;
-  height: fit-content;
-  overflow: visible;
-}
-/* .dropdown:hover {
-    height: fit-content;
-} */
-
-.truck-color{
-    background-color: #F5F5F5;
-}
-
-  .btn button{
-    text-align: center;
-    font: 500 10px / 13px Montserrat;
-    letter-spacing: .5px;
-    color: #000;
-    text-transform: uppercase;
-    width: 104px !important;
-    height: 30px;
-    border: 1px solid;
-    transition: all 0.3s;
-    
-  }
-  .btn button:hover{
-    background-color: black;
-    color: #F5F5F5;
-  }
-  .dropdown > a {
-    padding-bottom: 10px;
-  }
-  .dropdown > a:hover{
-    border-bottom: 3px solid black;
-
-  }
-
-  #footer-1{
-    position: relative;
-  }
-
-  #footer-1::after{
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background-color: black;
-    top: 0;
-  }
-.footer-content h3{
-    border-bottom: 1px solid #cccccc;
-}
-  .footer-content li{
-     margin-top: 1px;
-     margin-bottom: 1px;
-    font-family: Montserrat;
-    letter-spacing: .6px;
-    color: #3e434b;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 26px
-  }
-  .footer-content li a:hover{
-     border-bottom: 1px solid #cccccc;
-  }
-
-  .list ul a{
-    font-size: 14px;
-  font-weight: 600;
-  letter-spacing: .7px;
-  color: #3e434b;
-  line-height: 20px;
-  font-family: Montserrat;
-  text-transform: capitalize;
-  transition: all 0.3s;
-  }
-  
-  .list ul a:hover{
-    color: #FF7E00;
-  }
-
-
-  @media screen and (max-width:400px){
-    .padding-responsive{
-      padding: 0;
-    }
-  }
-
