--- a/Elton/bookstyles.css
+++ b/Elton/bookstyles.css
@@ -2,24 +2,28 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: montserrat,sans-serif;
+    font-family: montserrat, sans-serif;
 }
 
-.bg-color{
+.bg-color {
     background-color: #FFE619;
 }
-.bg-color-1{
+
+.bg-color-1 {
     background-color: #32CACE;
 }
-.bg-color-2{
+
+.bg-color-2 {
     background-color: #A3B7F0;
 }
-.color{
+
+.color {
     color: #3e434b;
 }
-main > p a:hover{
+
+main>p a:hover {
     color: #FF7E00;
-  }
+}
 
 main section aside>span {
     position: absolute;
@@ -45,19 +49,24 @@ main section .right .sort {
     top: -7vh;
     right: 2vw;
 }
-main section .right .specialll{
+
+main section .right .specialll {
     text-decoration: line-through;
-    color:rgb(150, 149, 149);
+    color: rgb(150, 149, 149);
 }
-main section .right .greennn{
+
+main section .right .greennn {
     color: green;
 }
-main section .right .name{
-    font-size:14px;
+
+main section .right .name {
+    font-size: 14px;
 }
-main section .right .author{
-    font-size:12px;
+
+main section .right .author {
+    font-size: 12px;
 }
+
 main section .right .items .item .pic {
     height: 38vh;
     width: 15vw;
@@ -81,11 +90,11 @@ main section .bag i {
     cursor: pointer;
 }
 
-li{
+li {
     list-style: none;
 }
 
-.drop{
+.drop {
 
     height: 0;
     border: 0;
@@ -93,21 +102,22 @@ li{
     overflow: hidden;
 }
 
-.dropdown:hover .drop{
-  border: 1px solid ;
-top: 32px;
-  height: fit-content;
-  overflow: visible;
+.dropdown:hover .drop {
+    border: 1px solid;
+    top: 32px;
+    height: fit-content;
+    overflow: visible;
 }
+
 /* .dropdown:hover {
     height: fit-content;
 } */
 
-.truck-color{
+.truck-color {
     background-color: #F5F5F5;
 }
 
-  .btn button{
+.btn button {
     text-align: center;
     font: 500 10px / 13px Montserrat;
     letter-spacing: .5px;
@@ -117,101 +127,116 @@ top: 32px;
     height: 30px;
     border: 1px solid;
     transition: all 0.3s;
-    
-  }
-  .btn button:hover{
+
+}
+
+.btn button:hover {
     background-color: black;
     color: #F5F5F5;
-  }
-  .dropdown > a {
+}
+
+.dropdown>a {
     padding-bottom: 10px;
-  }
-  .dropdown > a:hover{
+}
+
+.dropdown>a:hover {
     border-bottom: 3px solid black;
 
-  }
+}
 
-  #footer-1{
+#footer-1 {
     position: relative;
-  }
+}
 
-  #footer-1::after{
+#footer-1::after {
     position: absolute;
     height: 2px;
     width: 100%;
     background-color: black;
     top: 0;
-  }
-.footer-content h3{
+}
+
+.footer-content h3 {
     border-bottom: 1px solid #cccccc;
 }
-  .footer-content li{
-     margin-top: 1px;
-     margin-bottom: 1px;
+
+.footer-content li {
+    margin-top: 1px;
+    margin-bottom: 1px;
     font-family: Montserrat;
     letter-spacing: .6px;
     color: #3e434b;
     font-size: 12px;
     font-weight: 500;
     line-height: 26px
-  }
-  .footer-content li a:hover{
-     border-bottom: 1px solid #cccccc;
-  }
+}
 
-  .list ul a{
+.footer-content li a:hover {
+    border-bottom: 1px solid #cccccc;
+}
+
+.list ul a {
     font-size: 14px;
-  font-weight: 600;
-  letter-spacing: .7px;
-  color: #3e434b;
-  line-height: 20px;
-  font-family: Montserrat;
-  text-transform: capitalize;
-  transition: all 0.3s;
-  }
-  
-  .list ul a:hover{
+    font-weight: 600;
+    letter-spacing: .7px;
+    color: #3e434b;
+    line-height: 20px;
+    font-family: Montserrat;
+    text-transform: capitalize;
+    transition: all 0.3s;
+}
+
+.list ul a:hover {
     color: #FF7E00;
-  }
+}
 
+main .right .image1:hover {
+    content: url('https://www.crossword.in/cdn/shop/products/9789390166268_2_460x@2x.jpg?v=1663936263');
 
-@media (max-width:1279px){
-    main section .right .items .item{
-        margin-bottom:2vh;
+}
+
+@media (max-width:1279px) {
+    main section .right .items .item {
+        margin-bottom: 2vh;
     }
 }
-@media (max-width:1222px){
+
+@media (max-width:1222px) {
     main section .right .sort {
         top: -10vh;
         right: 2vw;
-    }   
+    }
 }
-@media (max-width:878px){
+
+@media (max-width:878px) {
     main section .right .items .item .pic {
         height: 33vh;
         width: 19vw;
     }
 }
-@media (max-width:878px){
+
+@media (max-width:878px) {
     main section .right .items .item .pic {
         height: 33vh;
         width: 22vw;
     }
 }
-@media(max-width:699px){
-    
+
+@media(max-width:699px) {
+
     main section .right .items .item .pic {
         height: 33vh;
         width: 15vw;
     }
-    
+
     main section .items .name {
         font-size: small;
     }
+
     main section .items .price {
-        font-size:small ;
+        font-size: small;
     }
-    
+
     main section .bag p {
         font-size: 8px;
         border: solid black 1px;
@@ -221,32 +246,34 @@ top: 32px;
         cursor: pointer;
     }
 }
-@media (max-width:562px){
-    main section .right .sort{
+
+@media (max-width:562px) {
+    main section .right .sort {
         display: none;
     }
+
     main section .right .items .item .pic {
         height: 33vh;
         width: 25vw;
     }
 }
-@media (max-width:542px){
+
+@media (max-width:542px) {
     main section .right .items .item .pic {
         height: 33vh;
         width: 30vw;
     }
 }
-@media (max-width:480px){
+
+@media (max-width:480px) {
     main section .right .items .item .pic {
         height: 33vh;
         width: 50vw;
     }
 }
 
-@media screen and (max-width:400px){
-    .padding-responsive{
-      padding: 0;
+@media screen and (max-width:400px) {
+    .padding-responsive {
+        padding: 0;
     }
-  }
-
-
+}
