--- a/Docs/style.css
+++ b/Docs/style.css
@@ -1,3 +1,8 @@
+html{
+  scroll-behavior: smooth;
+}
+
+
 .bg-color{
     background-color: #FFE619;
 }
@@ -12,6 +17,7 @@
 }
 body{
     font-family: Montserrat , sans-serif;
+ 
 }
 
 .section-wrapper::-webkit-scrollbar {
